# mingo

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  DataLinkDef.h  MingoPoint.cxx  MingoPoint.h
macros/rootgeo/: create_mingo_geo.C
macros/sim/: ana_mingo.C  runsim.C
mingo/: CMakeLists.txt  Mingo.cxx  Mingo.h  MingoLinkDef.h
